# FreeVC

./: commons.py  convert.py  data_utils.py  losses.py  models.py  modules.py  preprocess_spk.py  pyproject.toml  train.py  utils.py
hifigan/: __init__.py
speaker_encoder/: audio.py  inference.py  model.py  preprocess.py  voice_encoder.py
speaker_encoder/data_objects/: random_cycler.py  speaker.py  speaker_verification_dataset.py
tips-for-synthesizing-24KHz-wavs-from-16kHz-wavs/: data_utils_24.py  train_24.py
wavlm/: WavLM.py  modules.py
