[tool.poetry]
name = "freevc"
version = "0.1.0"
description = "FreeVC: Towards High-Quality Text-Free One-Shot Voice Conversion"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
torch = "^2.0.0"
librosa = "^0.10.0"
tqdm = "^4.65.0"
torchvision = "^0.15.1"
webrtcvad = "^2.0.10"

[tool.poetry.dev-dependencies]
ruff = "^0.0.262"
ssort = "^0.11.6"
black = "^23.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
